--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node database/index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +17,11 @@
   },
   "homepage": "https://github.com/Konders/cogitizepractice3rdgrade#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "exrpess": "^0.0.1-security",
     "mongoose": "^7.0.1"
   },
-  "devDependencies": {},
   "description": ""
 }
