--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "exrpess": "^0.0.1-security",
     "mongoose": "^7.0.1"
   },
-  "description": ""
+  "description": "",
+  "engines": {
+    "node": ">=14.20.1"
+  }
 }
