--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios-retry": "^3.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "node": "^19.8.1"
   }
 }
