--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2",
+    "dotenv": "^16.0.3",
+    "axios": "^1.3.4",
     "mongoose": "^7.0.3"
   },
   "devDependencies": {},
